Disable CSRF protection temporary

--- a/scala/web/chat/conf/application.conf
+++ b/scala/web/chat/conf/application.conf
@@ -16,3 +16,5 @@ db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost/chat"
 db.default.username=chatuser
 db.default.password="chat_user_password"
+
+play.filters.disabled += "play.filters.csrf.CSRFFilter"
